--- a/user/src/main/resources/application.properties
+++ b/user/src/main/resources/application.properties
@@ -14,5 +14,10 @@ eureka.client.service-url.default-zone=http://localhost:8761/eureka/
 eureka.instance.instance-id=${random.value}
 server.port=0
 
+spring.kafka.bootstrap-servers=localhost:29092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 
+kafka.topic.registrations.name=register_events
+kafka.topic.registrations.partitions=2
 
