Added mailing for confirmation account functionality

--- a/user/src/main/resources/application.properties
+++ b/user/src/main/resources/application.properties
@@ -16,8 +16,8 @@ server.port=0
 
 spring.kafka.bootstrap-servers=localhost:29092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 
-kafka.topic.registrations.name=register_events
+kafka.topics.registration-topic-name=register_events
 kafka.topic.registrations.partitions=2
 
