--- a/mail/src/main/resources/application.properties
+++ b/mail/src/main/resources/application.properties
@@ -9,3 +9,18 @@ spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
+
+kafka.groups.group-id=mailing-service
+spring.mail.host=localhost
+spring.mail.port=1025
+spring.mail.username=hello
+spring.mail.password=hello
+spring.mail.properties.mail.smtp.ssl.trust=*
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+kafka.topics.registration-topic-name=register_events
+
+email.properties.confirmation-token-url=http://localhost:8081/user/api/user-account/registration
+email.properties.our-email=jkob.matras@gmail.com
+
