--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=api-gateway
 server.port=8081
-eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.instance-id=${random.value}
 
 spring.cloud.gateway.discovery.locator.enabled=true
