--- a/mail/src/main/resources/application.properties
+++ b/mail/src/main/resources/application.properties
@@ -19,8 +19,12 @@ spring.mail.properties.mail.smtp.ssl.trust=*
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
-kafka.topics.registration-topic-name=register_events
 
+# User account
+kafka.topics.registration-topic-name=register_events
 email.properties.confirmation-token-url=http://localhost:8081/user/api/user-account/confirmation
 email.properties.our-email=jkob.matras@gmail.com
+
+# Newsletter
+kafka.topics.newsletter-topic-name=newsletter
 
