--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -6,3 +6,10 @@ eureka.instance.instance-id=${random.value}
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
+spring.cloud.gateway.globalcors.cors-configurations['[/**]'].allowed-origins=http://localhost:4200
+spring.cloud.gateway.globalcors.cors-configurations['[/**]'].allowed-methods=GET,POST,PUT,DELETE
+spring.cloud.gateway.globalcors.cors-configurations['[/**]'].allowed-headers=Origin,Content-Type,Accept,Authorization
+spring.cloud.gateway.globalcors.cors-configurations['[/**]'].allow-credentials=true
+
+
+
